inclusao de projeto de database

--- a/src/Contoso.Store/Contoso.Store.Infrastructure/Contoso.Store.Infrastructure.csproj
+++ b/src/Contoso.Store/Contoso.Store.Infrastructure/Contoso.Store.Infrastructure.csproj
@@ -5,15 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidator" Version="2.0.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Contoso.Store.Shared\Contoso.Store.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Contexts\Commands\" />
   </ItemGroup>
 
 </Project>
