--- a/src/Contoso.Store/Contoso.Store.Infrastructure/Contoso.Store.Infrastructure.csproj
+++ b/src/Contoso.Store/Contoso.Store.Infrastructure/Contoso.Store.Infrastructure.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Contoso.Store.Application\Contoso.Store.Application.csproj" />
     <ProjectReference Include="..\Contoso.Store.Shared\Contoso.Store.Shared.csproj" />
   </ItemGroup>
 
