criacao de api e ioc

--- a/src/Contoso.Store/Contoso.Store.API/Contoso.Store.API.csproj
+++ b/src/Contoso.Store/Contoso.Store.API/Contoso.Store.API.csproj
@@ -8,7 +8,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Contoso.Store.Application\Contoso.Store.Application.csproj" />
+    <ProjectReference Include="..\Contoso.Store.Infrastructure\Contoso.Store.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
