--- a/src/Contoso.Store/Contoso.Store.Shared/Contoso.Store.Shared.csproj
+++ b/src/Contoso.Store/Contoso.Store.Shared/Contoso.Store.Shared.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidator" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
 </Project>
