inclusao de authorization

--- a/src/Contoso.Store/Contoso.Store.Shared/Contoso.Store.Shared.csproj
+++ b/src/Contoso.Store/Contoso.Store.Shared/Contoso.Store.Shared.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="FluentValidator" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.6.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.6.0" />
   </ItemGroup>
 
 </Project>
