configs de swagger e settings

--- a/src/Contoso.Store/Contoso.Store.API/appsettings.json
+++ b/src/Contoso.Store/Contoso.Store.API/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "Secret": "Trustn01",
+    "Expiration": 2,
+    "Issuer": "localhost",
+    "ValidAt": "https://localhost"
+  }
 }
