Jwt token adicionado

--- a/src/Contoso.Store/Contoso.Store.API/appsettings.json
+++ b/src/Contoso.Store/Contoso.Store.API/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "Secret": "Trustn01",
+    "Secret": "@nUnc4C0nfie3mNg2020*!", /*Essa chave precisa ser grande*/
     "Expiration": 2,
     "Issuer": "localhost",
     "ValidAt": "https://localhost"
