--- a/src/Contoso.Store/Contoso.Store.Tests/Contoso.Store.Tests.csproj
+++ b/src/Contoso.Store/Contoso.Store.Tests/Contoso.Store.Tests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Contoso.Store.Application\Contoso.Store.Application.csproj" />
     <ProjectReference Include="..\Contoso.Store.Domain\Contoso.Store.Domain.csproj" />
   </ItemGroup>
 
