inclusao de repo mongodb

--- a/src/Contoso.Store/Contoso.Store.API/appsettings.json
+++ b/src/Contoso.Store/Contoso.Store.API/appsettings.json
@@ -10,5 +10,9 @@
     "Expiration": 2,
     "Issuer": "localhost",
     "ValidAt": "https://localhost"
+  },
+  "MongoDb": {
+    "ConnectionString": "mongodb://localhost:8010/",
+    "Database": "ContosoStore"
   }
 }
