--- a/src/Contoso.Store/Contoso.Store.Infrastructure/Contoso.Store.Infrastructure.csproj
+++ b/src/Contoso.Store/Contoso.Store.Infrastructure/Contoso.Store.Infrastructure.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
